--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,38 +1,21 @@
-.App {
+.App__title {
+  margin: auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.page {
+  margin: 0;
+  box-sizing: border-box;
+  min-width: 300px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 32px 40px 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.page__content {
+  width: 100%;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page__header {
+  height: 60px;
 }
