--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  font-family: Cabinet Grotesk, "serif";
 }
 
 .modal-content {
@@ -37,4 +38,34 @@
   position: absolute;
   bottom: calc(100% - 32px);
   left: calc(100% - 38px);
+}
+
+.modal_label-text {
+  margin: 0 0 3px;
+
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.modal__input {
+  border: none;
+  width: 100%;
+  border-bottom: 1px solid black;
+  font-family: Cabinet Grotesk, "serif";
+  font-size: 16px;
+}
+
+.modal__button {
+  width: 124px;
+  height: 36px;
+  font-weight: 400;
+  font-size: 16px;
+  font-style: normal;
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal__radio-button-text {
+  font-size: 16px;
 }
