--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,3 @@
 @import url("./components/ItemModal/ItemModal.css");
 @import url("./components/Main/card-items.css");
-@import url("./components/Vendor/fonts.css");
+@import url("./Vendor/fonts.css");
