--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -27,6 +27,28 @@
   position: relative;
 }
 
+.modal-content__captions {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  font-family: Cabinet Grotesk, "serif";
+  font-size: 16px;
+}
+
+.modal-content__delete-section {
+  padding-top: 15px;
+}
+
+.modal-content__delete-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-family: Cabinet Grotesk, "serif";
+  font-size: 16px;
+  color: rgba(255, 77, 0, 1);
+}
+
 .modal-content__close-button {
   background-image: url("../../images/Close\ Button.svg");
   border: none;
