--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -1,5 +1,37 @@
-.ClothesSection {
+.clothesSection {
+  max-width: 1015px;
+  width: 100%;
+}
+
+.clothesSection__cards {
   max-width: 1015px;
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.clothesSection__add-clothes {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 16px;
+}
+
+.clothesSection__add-clothes-button {
+  text-decoration: none;
+  border: none;
+  background: none;
+  font-family: Cabinet Grotesk, "serif";
+  font-weight: 400;
+  font-size: 20px;
+  color: #000;
+  cursor: pointer;
+  margin: 0;
+}
+
+.clothesSection__text {
+  font-family: Cabinet Grotesk, "serif";
+  font-weight: 400;
+  font-size: 20px;
+  margin: 0;
 }
