--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @import url("./components/ItemModal/ItemModal.css");
 @import url("./components/Main/card-items.css");
 @import url("./Vendor/fonts.css");
+
+body {
+  margin: 0px;
+}
+
+body .modal {
+  background-color: rgba(0, 0, 0, 0.3);
+}
