--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -99,6 +99,29 @@
   border: none;
 }
 
+.modal__button-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.button_visible {
+  font-family: Cabinet Grotesk, "serif";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+  background: none;
+  border: none;
+  padding: 0;
+}
+
+.button_visible:hover {
+  cursor: pointer;
+}
+
 .modal__button:hover {
   cursor: pointer;
   opacity: 0.6;
