--- a/src/components/sidebar/SideBar.css
+++ b/src/components/sidebar/SideBar.css
@@ -2,6 +2,7 @@
   max-width: 229px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   flex-wrap: nowrap;
   gap: 15px;
 }
@@ -9,4 +10,27 @@
 .sidebar__avatar-image {
   position: relative;
   top: 10px;
+}
+
+.sideBar__profile {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 10px;
+}
+.sideBar__button {
+  text-decoration: none;
+  border: none;
+  background: none;
+  font-family: Cabinet Grotesk, "serif";
+  font-weight: 400;
+  font-size: 20px;
+  color: #000;
+  cursor: pointer;
+}
+
+.sideBar__edit-profile-section {
+}
+
+.sideBar__log-out-section {
 }
